--- a/strikezone.html
+++ b/strikezone.html
@@ -139,6 +139,23 @@
   			
   <rect id="rightybot" onclick="rightybot();" x="815" y="1500"
 			width="150" height="285" fill="yellow"></rect>
+			
+			<rect id="at" onclick="at();" 
+			x="190" y="60" width="200" height="300" fill="transparent" stroke="black" stroke-width="1" ></rect>
+			<rect id="bt" onclick="bt();"
+			x="390" y="60" width="210" height="300" fill="transparent" stroke="black" stroke-width="1" ></rect>
+			<rect id="ct" onclick="ct" 
+			x="600" y="60" width="176" height="300" fill="transparent" stroke="black" stroke-width="1" ></rect>
+			<rect id="dt" onclick="dt();" 
+			x="190" y="360" width="200" height="285" fill="transparent" stroke="black" stroke-width="1" ></rect>			
+			<rect id="et" onclick="et();" 
+			x="600" y="360" width="176" height="285" fill="transparent" stroke="black" stroke-width="1" ></rect>		
+			<rect id="ft" onclick="ft();" 
+			x="190" y="645" width="200" height="315" fill="transparent" stroke="black" stroke-width="1" ></rect>
+			<rect id="gt" onclick="gt();" 
+			x="390" y="645" width="210" height="315" fill="transparent" stroke="black" stroke-width="1" ></rect>
+			<rect id="ht" onclick="ht();" 
+			x="600" y="645" width="176" height="315" fill="transparent" stroke="black" stroke-width="1" ></rect>
  </g>
 </svg>
 
