--- a/strikezone.html
+++ b/strikezone.html
@@ -47,6 +47,7 @@
 #actiont, #actionb {
 	font-size: 40px;
 }
+
 </style>
 <script>
 	//function readMouseMove(e) {
@@ -140,21 +141,21 @@
   <rect id="rightybot" onclick="rightybot();" x="815" y="1500"
 			width="150" height="285" fill="yellow"></rect>
 			
-			<rect id="at" onclick="at();" 
+			<rect id="at" onclick="incrementballstop();" 
 			x="190" y="60" width="200" height="300" fill="transparent" stroke="black" stroke-width="1" ></rect>
-			<rect id="bt" onclick="bt();"
+			<rect id="bt" onclick="incrementballstop();"
 			x="390" y="60" width="210" height="300" fill="transparent" stroke="black" stroke-width="1" ></rect>
-			<rect id="ct" onclick="ct" 
+			<rect id="ct" onclick="incrementballstop();" 
 			x="600" y="60" width="176" height="300" fill="transparent" stroke="black" stroke-width="1" ></rect>
-			<rect id="dt" onclick="dt();" 
+			<rect id="dt" onclick="incrementballstop();" 
 			x="190" y="360" width="200" height="285" fill="transparent" stroke="black" stroke-width="1" ></rect>			
-			<rect id="et" onclick="et();" 
+			<rect id="et" onclick="incrementballstop();" 
 			x="600" y="360" width="176" height="285" fill="transparent" stroke="black" stroke-width="1" ></rect>		
-			<rect id="ft" onclick="ft();" 
+			<rect id="ft" onclick="incrementballstop();" 
 			x="190" y="645" width="200" height="315" fill="transparent" stroke="black" stroke-width="1" ></rect>
-			<rect id="gt" onclick="gt();" 
+			<rect id="gt" onclick="incrementballstop();" 
 			x="390" y="645" width="210" height="315" fill="transparent" stroke="black" stroke-width="1" ></rect>
-			<rect id="ht" onclick="ht();" 
+			<rect id="ht" onclick="incrementballstop();" 
 			x="600" y="645" width="176" height="315" fill="transparent" stroke="black" stroke-width="1" ></rect>
  </g>
 </svg>
