--- a/strikezone.html
+++ b/strikezone.html
@@ -49,8 +49,8 @@
 	font-size: 40px;
 }
 
-#table1, #table2 {
-	font-size: 10px;
+#a,#b,#c,#d,#e,#f,#g,#h,#i,#j,#k,#l,#m,#n,#o,#p,#q,#r{
+	font-size: 20px;
 	background-color: lightgreen;
 }
 </style>
@@ -78,19 +78,19 @@
 	<input id="totaltop" size="3" type="text" id="totaltop" value="0">
 	<table id="table1">
 		<tr>
-			<td><input size="2" type="text" value="0">
-			<td><input size="2" type="text" value="0">
-			<td><input size="2" type="text" value="0">
+			<td><input id="a" size="2" type="text" value="0">
+			<td><input id="b" size="2" type="text" value="0">
+			<td><input id="c" size="2" type="text" value="0">
 		<tr></tr>
 		<tr>
-			<td><input size="2" type="text" value="0">
-			<td><input size="2" type="text" value="0">
-			<td><input size="2" type="text" value="0">
+			<td><input id="d" size="2" type="text" value="0">
+			<td><input id="e" size="2" type="text" value="">
+			<td><input id="f" size="2" type="text" value="0">
 		<tr></tr>
 		<tr>
-			<td><input size="2" type="text" value="0">
-			<td><input size="2" type="text" value="0">
-			<td><input size="2" type="text" value="0">
+			<td><input id="g" size="2" type="text" value="0">
+			<td><input id="h" size="2" type="text" value="0">
+			<td><input id="i" size="2" type="text" value="0">
 		<tr></tr>
 	</table>
 
@@ -168,8 +168,7 @@
 			
 			<rect id="at" onclick="incrementballstop();" x="190" y="60"
 			width="200" height="300" fill="transparent" stroke="black"
-			stroke-width="1"></rect>
-			
+			stroke-width="1"></rect>	
 			<rect id="bt" onclick="incrementballstop();" x="390" y="60"
 			width="210" height="300" fill="transparent" stroke="black"
 			stroke-width="1"></rect>
@@ -202,19 +201,19 @@
 	<input size="3" type="text" id="totalbot" value="0">
 	<table id="table2">
 		<tr>
-			<td><input size="2" type="text" value="0">
-			<td><input size="2" type="text" value="0">
-			<td><input size="2" type="text" value="0">
+			<td><input id="j" size="2" type="text" value="0">
+			<td><input id="k" size="2" type="text" value="0">
+			<td><input id="l" size="2" type="text" value="0">
 		<tr></tr>
 		<tr>
-			<td><input size="2" type="text" value="0">
-			<td><input size="2" type="text" value="0">
-			<td><input size="2" type="text" value="0">
+			<td><input id="m" size="2" type="text" value="0">
+			<td><input id="n" size="2" type="text" value="">
+			<td><input id="o" size="2" type="text" value="0">
 		<tr></tr>
 		<tr>
-			<td><input size="2" type="text" value="0">
-			<td><input size="2" type="text" value="0">
-			<td><input size="2" type="text" value="0">
+			<td><input id="p" size="2" type="text" value="0">
+			<td><input id="q" size="2" type="text" value="0">
+			<td><input id="r" size="2" type="text" value="0">
 		<tr></tr>
 	</table>
 	<br>
