--- a/strikezone.html
+++ b/strikezone.html
@@ -76,7 +76,7 @@
 	<input id="ballstop" size="3" type="text" id="ballstop" value="0">
 	<input id="strikestop" size="3" type="text" id='strikestop' value="0">
 	<input id="totaltop" size="3" type="text" id="totaltop" value="0">
-	<table id="table1">
+	<!-- <table id="table1">
 		<tr>
 			<td><input id="atop" size="2" type="text" value="0">
 			<td><input id="btop" size="2" type="text" value="0">
@@ -92,7 +92,7 @@
 			<td><input id="gtop" size="2" type="text" value="0">
 			<td><input id="htop" size="2" type="text" value="0">
 		<tr></tr>
-	</table>
+	</table> -->
 
 	<br>
 
@@ -138,9 +138,10 @@
   
   <rect id="leftytop" onclick="leftytop();" x="15" y="360" width="150"
 			height="285" fill="yellow"></rect>
-			<circle cx="90" cy="300" r="60" stroke="green" stroke-width="3" fill="transparent"></circle> 
-			<path d=" M70 645 L 70 800" stroke-width="3" stroke="green" fill="transparent"></path>
-			<path d=" M100 645 L 100 800" stroke-width="3" stroke="green" fill="transparent"></path>
+	<!-- <circle cx="90" cy="270" r="60" stroke="green" stroke-width="3" fill="green" id="head"></circle> 
+	<path d=" M65 645 L 65 800 L 85 800" stroke-width="3" stroke="green" fill="transparent" id="leftleg" ></path>
+	<path d=" M110 645 L 110 800 L 120 820" stroke-width="3" stroke="green" fill="transparent" id="rightleg"></path>
+	<path d=" M90 420 L 110 500 L 110 420"stroke-width="3" stroke="green" fill="transparent"></path> -->
   
   <rect id="topredballs" x="190" y="60" width="586" height="900" fill="red"></rect>
 			
@@ -226,7 +227,7 @@
 	<input size="3" type="text" id="ballsbot" value="0">
 	<input size="3" type="text" id='strikesbot' value="0">
 	<input size="3" type="text" id="totalbot" value="0">
-	<table id="table2">
+	<!-- <table id="table2">
 		<tr>
 			<td><input id="j" size="2" type="text" value="0">
 			<td><input id="k" size="2" type="text" value="0">
@@ -242,7 +243,7 @@
 			<td><input id="q" size="2" type="text" value="0">
 			<td><input id="r" size="2" type="text" value="0">
 		<tr></tr>
-	</table>
+	</table> -->
 	<br>
 	<input size="3" type="text" id="bot1" placeholder="1B"
 		onclick="pitchesBot1();" readonly value="">
