--- a/strikezone.html
+++ b/strikezone.html
@@ -9,7 +9,7 @@
 }
 
 #sv_window {
-	/* background-color: lightblue; */
+	 background-color: lightblue; 
 	
 }
 
@@ -55,17 +55,9 @@
 }
 </style>
 <script>
-	//function readMouseMove(e) {
-	//	var result_x = document.getElementById('x_result');
-	//	var result_y = document.getElementById('y_result');
-	//	var result_xb = document.getElementById('xb_result');
-	//	var result_yb = document.getElementById('yb_result');
-	//	result_x.innerHTML = e.clientX;
-	//	result_y.innerHTML = e.clientY;
-	//	result_xb.innerHTML = e.clientX;
-	//	result_yb.innerHTML = e.clientY;
-	//	}
-	//	document.onmousemove = readMouseMove;
+	
+	
+	
 </script>
 </head>
 <body id="body">
@@ -138,10 +130,15 @@
   
   <rect id="leftytop" onclick="leftytop();" x="15" y="360" width="150"
 			height="285" fill="yellow"></rect>
-	<!-- <circle cx="90" cy="270" r="60" stroke="green" stroke-width="3" fill="green" id="head"></circle> 
+    <circle cx="90" cy="270" r="60" stroke="green" stroke-width="3" fill="green" id="head"></circle> 
+    <path d=" M25 242 L153 242 L92 195 Z" stroke-width="3" stroke="red" fill="red" id="hat" ></path>
+    <circle cx="64" cy="256" r="4" stroke="red" stroke-width="1" fill="red" id="lefteye"></circle>
+    <circle cx="110" cy="256" r="4" stroke="red" stroke-width="1" fill="red" id="righteye"></circle>
+    <circle cx="89" cy="282" r="6" stroke="red" stroke-width="1" fill="red" id="nose"></circle>
+    <path d=" M57 295 L75 303 L 106 303 L 118 295 " stroke-width="3" stroke="red" fill="transparent" id="mouth" ></path>
 	<path d=" M65 645 L 65 800 L 85 800" stroke-width="3" stroke="green" fill="transparent" id="leftleg" ></path>
 	<path d=" M110 645 L 110 800 L 120 820" stroke-width="3" stroke="green" fill="transparent" id="rightleg"></path>
-	<path d=" M90 420 L 110 500 L 110 420"stroke-width="3" stroke="green" fill="transparent"></path> -->
+	<path d=" M90 420 L 110 500 L 110 420"stroke-width="3" stroke="green" fill="transparent"></path> 
   
   <rect id="topredballs" x="190" y="60" width="586" height="900" fill="red"></rect>
 			
@@ -634,8 +631,7 @@
 	<br>
 	<br>
 	<br>
-	<!-- <h2 id="xb_result">0</h2>
-	<h2 id="yb_result">0</h2> -->
+	
 	<h1>BOTTOM OF THE INNING</h1>
 </body>
 </html>
