--- a/strikezone.html
+++ b/strikezone.html
@@ -138,7 +138,8 @@
     <path d=" M57 295 L75 303 L 106 303 L 118 295 " stroke-width="3" stroke="red" fill="transparent" id="mouth" ></path>
 	<path d=" M65 645 L 65 800 L 85 800" stroke-width="3" stroke="green" fill="transparent" id="leftleg" ></path>
 	<path d=" M110 645 L 110 800 L 120 820" stroke-width="3" stroke="green" fill="transparent" id="rightleg"></path>
-	<path d=" M90 420 L 110 500 L 110 420"stroke-width="3" stroke="green" fill="transparent"></path> 
+	
+	<path d=" M90 420 L 110 500 L 212 403 L 223 418 L 100 528 L 73 428 z "stroke-width="3" stroke="green" fill="green"></path>
   
   <rect id="topredballs" x="190" y="60" width="586" height="900" fill="red"></rect>
 			
